Fixed scrolling showing wrong color behind <body>

--- a/docs/static/docs.css
+++ b/docs/static/docs.css
@@ -11,6 +11,10 @@
   --sidebar-width: 25rem;
 }
 
+html {
+  background: var(--base) !important;
+}
+
 
 
 .markdown-section {
